# Geant4-WCD

./: .gitignore  README.md
Ar-Sim/: README-MODIFICACION  README-MODIFICACION~
Ar-Sim/OpNovice/: OpNovice.cc
Hunapu/: CMakeLists.txt  Hunapu.cc  muon-nonvert.mac  muon.mac  pulses.C
Hunapu-0.1/: README  muon.mac  vis.mac
Hunapu-0.1/include/: HunapuAnalysis.hh  HunapuDetectorConstruction.hh  HunapuHit.hh  HunapuRun.hh  HunapuRunAction.hh  HunapuSteppingAction.hh
Hunapu-0.1/src/: HunapuHit.cc  HunapuSensitiveDetector.cc  HunapuStackingAction.cc  HunapuSteppingAction.cc
Hunapu-0.2/: CMakeLists.txt  GNUmakefile  README  WCDtank.cc  electronics.cc  pulses.C
Hunapu-0.2/include/WCDtank/: WCDtankActionInitialization.hh  WCDtankAnalysis.hh  WCDtankDetectorConstruction.hh  WCDtankEventAction.hh  WCDtankHit.hh  WCDtankPhysicsList.hh  WCDtankPrimaryGeneratorAction.hh  WCDtankPrimaryGeneratorMessenger.hh  WCDtankRandom.hh  WCDtankRun.hh  WCDtankRunAction.hh  WCDtankSensitiveDetector.hh  WCDtankStackingAction.hh  WCDtankSteppingAction.hh
Hunapu-0.2/include/cla/: CLAcmdln.hh  CLAdglbarg.hh  CLAglbarg.hh  CLAopt.hh  CLAtdopt.hh
Hunapu-0.2/include/electronics/: elecADC.hh  elecCommandLine.hh  elecRCequivalent.hh  elecTypes.hh  elecWCDtankPMTdata.hh
Hunapu-0.2/src/WCDtank/: WCDtankActionInitialization.cc  WCDtankDetectorConstructor.cc  WCDtankEventAction.cc  WCDtankHit.cc  WCDtankPhysicsList.cc  WCDtankPrimaryGeneratorAction.cc  WCDtankPrimaryGeneratorMessenger.cc  WCDtankRun.cc  WCDtankRunAction.cc  WCDtankSensitiveDetector.cc  WCDtankStackingAction.cc  WCDtankSteppingAction.cc
Hunapu-0.2/src/cla/: CLAcmdln.cc  CLAdglbarg.cc  CLAglbarg.cc  CLAopt.cc  CLAtdopt.cc
Hunapu-0.2/src/electronics/: elecADC.cc  elecCommandLine.cc  elecRCequivalent.cc  elecWCDtankPMTdata.cc
Hunapu/include/: HunapuDetectorConstruction.hh  HunapuEventAction.hh  HunapuHit.hh  HunapuPrimaryGeneratorAction.hh  HunapuRunAction.hh  HunapuSensitiveDetector.hh  HunapuStackingAction.hh
Hunapu/src/: HunapuActionInitialization.cc  HunapuDetectorConstructor.cc  HunapuEventAction.cc  HunapuHit.cc  HunapuPrimaryGeneratorAction.cc  HunapuPrimaryGeneratorMessenger.cc  HunapuRun.cc  HunapuRunAction.cc  HunapuSensitiveDetector.cc
Hunapu_0.1/: README  muon-vert.mac
Hunapu_0.1/include/: HunapuActionInitialization.hh  HunapuPhysicsList.hh  HunapuPrimaryGeneratorMessenger.hh  HunapuRandom.hh
Hunapu_0.1/src/: HunapuPhysicsList.cc
KinichAhau/: KinichAhau.cc  KinichAhau.in  README KA  optPhoton.mac
KinichAhau/include/: KinichAhauDetectorConstruction.hh  KinichAhauPrimaryGeneratorAction.hh  KinichAhauRun.hh  KinichAhauRun.hh~  KinichAhauRunAction.hh  KinichAhauSensitiveDetector.hh  KinichAhauSteppingAction.hh
KinichAhau/src/: KinichAhauActionInitialization.cc  KinichAhauDetectorConstruction.cc  KinichAhauDetectorConstruction.cc~  KinichAhauPhysicsList.cc  KinichAhauPrimaryGeneratorAction.cc  KinichAhauRun.cc  KinichAhauRunAction.cc  KinichAhauSensitiveDetector.cc  KinichAhauSensitiveDetector.cc~  KinichAhauStackingAction.cc  KinichAhauSteppingAction.cc  KinichAhauSteppingAction.cc~  KinichAhauSteppingVerbose.cc
Tst/: CMakeLists.txt  GNUmakefile  README  Tst.cc  muon.mac  vis.mac
Tst/include/: TstActionInitialization.hh  TstAnalysis.hh  TstDetectorConstruction.hh  TstEventAction.hh  TstHit.hh  TstPhysicsList.hh  TstPrimaryGeneratorAction.hh  TstRun.hh  TstRunAction.hh  (+2 more)
(+17 files in other folders)
